--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "eslint": "^7.16.0",
         "eslint-plugin-react": "^7.12.4",
         "express": "^4.14.0",
+        "http-proxy-middleware": "^2.0.6",
         "jest": "^26.6.3",
         "jest-fetch-mock": "^3.0.3",
         "mini-css-extract-plugin": "^1.3.3",
@@ -42,6 +43,7 @@
         "nodemon": "^2.0.6",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
+        "react-minimal-side-navigation": "^1.9.2",
         "react-moment": "^1.1.2",
         "react-redux": "^7.1.0",
         "react-router": "^5.0.1",
